Compilation and execution information (windows)